src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Case App Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>2L Enhancement</fullName>
        </values>
        <values>
            <fullName>Backlog</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>In Review</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Solution Approved</fullName>
        </values>
        <values>
            <fullName>Waiting for Response</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Case Implementation Service</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>2L Enhancement</fullName>
        </values>
        <values>
            <fullName>Backlog</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>In Review</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Solution Approved</fullName>
        </values>
        <values>
            <fullName>Waiting for Response</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Case Process</fullName>
        <description>default process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Case default</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Affected_Users__c</fullName>
        <label>Affected Users</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2-20</fullName>
                </value>
                <value>
                    <fullName>21-50</fullName>
                </value>
                <value>
                    <fullName>&gt;50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aged__c</fullName>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aged</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assign a user</description>
        <label>Assigned to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <displayFormat>Case-{0000}</displayFormat>
        <label>Case Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <inlineHelpText>Please select the closest value that represents the issue</inlineHelpText>
        <label>Case Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Creation</fullName>
                    <color>#CC33CC</color>
                    <default>true</default>
                    <label>Account Creation</label>
                </value>
                <value>
                    <fullName>Bug</fullName>
                    <color>#FF0000</color>
                    <label>Bug</label>
                </value>
                <value>
                    <fullName>Data Change</fullName>
                    <color>#33CCFF</color>
                    <label>Data Change</label>
                </value>
                <value>
                    <fullName>Enhancement Request</fullName>
                    <color>#F3D904</color>
                    <label>Enhancement Request</label>
                </value>
                <value>
                    <fullName>Information</fullName>
                    <color>#990000</color>
                    <label>Information</label>
                </value>
                <value>
                    <fullName>New User</fullName>
                    <color>#FF9900</color>
                    <label>New User</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <color>#33CC00</color>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Record Merge</fullName>
                    <color>#F96FB7</color>
                    <label>Record Merge</label>
                </value>
                <value>
                    <fullName>Reports and Dashboards</fullName>
                    <color>#6666CC</color>
                    <label>Reports and Dashboards</label>
                </value>
                <value>
                    <fullName>Termination</fullName>
                    <color>#333333</color>
                    <label>Termination</label>
                </value>
                <value>
                    <fullName>Training Issue</fullName>
                    <color>#FFFF66</color>
                    <label>Training Issue</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Performance/Scalability</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>Memory Leaks</fullName>
                </value>
                <value>
                    <fullName>Incorrect Behavior</fullName>
                </value>
                <value>
                    <fullName>User Experience</fullName>
                </value>
                <value>
                    <fullName>Malfunction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component/Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Market</fullName>
                </value>
                <value>
                    <fullName>Presentation</fullName>
                </value>
                <value>
                    <fullName>Persistence</fullName>
                </value>
                <value>
                    <fullName>Monitoring</fullName>
                </value>
                <value>
                    <fullName>Reporter</fullName>
                </value>
                <value>
                    <fullName>Planner</fullName>
                </value>
                <value>
                    <fullName>Resolver</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Delivered__c</fullName>
        <label>Date Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Describe_Your_Problem_Question_del__c</fullName>
        <label>Describe Your Problem/Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_About_Fix__c</fullName>
        <description>This field contains description about fix of the issue.</description>
        <label>Description About Fix</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discover_Org_Seats__c</fullName>
        <defaultValue>117</defaultValue>
        <label>Discover Org Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discover_Org__c</fullName>
        <formula>&quot;https://go.discoverydb.com/eui/#/login&quot;+&quot;  &quot;+&quot;(117 Total seats)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discover Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discover_Org_no__c</fullName>
        <description>This number will be decremented from the total number of seats in Discover Org</description>
        <label>Discover Org #</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engineer__c</fullName>
        <label>Engineer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Benjamin, Shai</fullName>
                </value>
                <value>
                    <fullName>Florissi, Danilo</fullName>
                </value>
                <value>
                    <fullName>Katki, Navaz</fullName>
                </value>
                <value>
                    <fullName>Miller, Christine</fullName>
                </value>
                <value>
                    <fullName>Sara, Endre</fullName>
                </value>
                <value>
                    <fullName>Tal, Ariel</fullName>
                </value>
                <value>
                    <fullName>Vyas, Nitya</fullName>
                </value>
                <value>
                    <fullName>Wild, Fred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Go_Live_Date__c</fullName>
        <defaultValue>TODAY () + (24/24)</defaultValue>
        <description>The Date that the enhancement is active in Production Environment</description>
        <label>Go-Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Integrated_Applications__c</fullName>
        <description>The role-based third-party apps that need to be assigned for each user.</description>
        <formula>IF(
      CONTAINS(Title__c, &quot;SDR&quot;),
   &quot;DiscoverOrg, LinkedIn Navigator&quot;,

IF(OR(
      CONTAINS(Title__c, &quot;Commercial&quot;), 
      CONTAINS(Title__c, &quot;Enterprise&quot;)),
   &quot;LinkedIn Navigator&quot;,

IF(OR(
      CONTAINS(Title__c, &quot;Customer Account&quot;), 
      CONTAINS(Title__c, &quot;xxx&quot;)),
   &quot;GainSight&quot;,

&quot;None&quot;

)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Integrated Applications</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Nav__c</fullName>
        <formula>&quot;https://www.linkedin.com&quot;+&quot;  &quot;+&quot;(175 Total seats)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LinkedIn_Nav</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Nav_no__c</fullName>
        <label>LinkedIn_Nav #</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_User_Name__c</fullName>
        <description>The name of the New Turbo SF User</description>
        <label>New User Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_User_Start_Date__c</fullName>
        <description>The date the New User needs to be set up in Salesforce</description>
        <label>New User Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <formula>Account.Opps_open_Pipe__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Provisioning_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked by a WFR/FU:New User / Application Provisioning (ID: 01Q570000003Vn1)</description>
        <label>Provisioning Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reported_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reported By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data Change</fullName>
                    <color>#3366FF</color>
                    <label>Data Change</label>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                    <color>#FF0000</color>
                    <label>Enhancement</label>
                </value>
                <value>
                    <fullName>Issue/Bug</fullName>
                    <color>#FF9900</color>
                    <label>Issue/Bug</label>
                </value>
                <value>
                    <fullName>New User</fullName>
                    <color>#33CC00</color>
                    <label>New User</label>
                </value>
                <value>
                    <fullName>Question/Information</fullName>
                    <color>#CC33CC</color>
                    <label>Question/Information</label>
                </value>
                <value>
                    <fullName>Reports and Dashboards</fullName>
                    <color>#9999FF</color>
                    <label>Reports and Dashboards</label>
                </value>
                <value>
                    <fullName>Termination</fullName>
                    <color>#FF6666</color>
                    <label>Termination</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The date that the modification is ready for review to the primary Contact
(in the case of New User this will be the Start Date)</description>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Salesforce_Permission_Sets__c</fullName>
        <formula>IF(OR(
      CONTAINS(Title__c, &quot;Rep&quot;), 
      CONTAINS(Title__c, &quot;Standard (Sales)&quot;)),
   &quot;BrainShark Coaching Permissions, Standard Enterprise AE&quot;,

IF(OR(
      CONTAINS(Title__c, &quot;SDR&quot;), 
      CONTAINS(Title__c, &quot;Sales Development&quot;)),
   &quot;BrainShark Coaching Permissions, Standard SDR, Access to Discover Org&quot;,

IF(OR(
      CONTAINS(Title__c, &quot;Professional Services&quot;), 
      CONTAINS(Title__c, &quot;Technical Account Manager&quot;)),
   &quot;Customer Success Manager&quot;,

IF(OR(
      CONTAINS(Title__c, &quot;Customer Support Engineer&quot;), 
      CONTAINS(Title__c, &quot;Support&quot;)),
   &quot;Support&quot;,

&quot;None Needed&quot;

))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Permission Sets</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Profile__c</fullName>
        <formula>IF(OR(
      CONTAINS(Title__c, &quot;Enterprise&quot;), 
      CONTAINS(Title__c, &quot;Commercial&quot;)),
   &quot;Standard (Sales)&quot;,

IF(OR(
      CONTAINS(Title__c, &quot;Professional Services&quot;), 
      CONTAINS(Title__c, &quot;Technical Account Manager&quot;)),
   &quot;Engineer&quot;,

IF(OR(
      CONTAINS(Title__c, &quot;Customer Support Engineer&quot;), 
      CONTAINS(Title__c, &quot;Support&quot;)),
   &quot;Support&quot;,

IF(OR(
      CONTAINS(Title__c, &quot;General Counsel&quot;), 
      CONTAINS(Title__c, &quot;Controller&quot;)),
   &quot;Finance User&quot;,

NULL)
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Role__c</fullName>
        <description>The Salesforce Role is derived from the HR Title</description>
        <label>Salesforce Role</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be checked when testing has been completed and approved by the end user.</description>
        <label>Solution Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Any case must be in one of these states</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Investigate</fullName>
                    <default>true</default>
                    <label>Investigate</label>
                </value>
                <value>
                    <fullName>Implement</fullName>
                </value>
                <value>
                    <fullName>Verify</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Affected__c</fullName>
        <description>To record which Department is seeking solutions</description>
        <label>Team Affected</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Turbonomic_Departments</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>The title of the new user as defined by Human Resources this will be translated with a formula to generate a Sf Role and Profile on the Case to aid in User record creation.</description>
        <label>Title</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_License__c</fullName>
        <formula>&quot;Salesforce&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User License</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Sets_to_update__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <description>Any Global value sets that this user will be needed on.</description>
        <label>Value Sets to update</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Created_At__c</fullName>
        <label>Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Initially_Assigned_At__c</fullName>
        <label>Initially Assigned At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Resolution_Time__c</fullName>
        <label>Resolution Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Solved_At__c</fullName>
        <label>Solved At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Updated_At__c</fullName>
        <label>Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_Ticket_ID__c</fullName>
        <label>Zendesk Support Ticket ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zoom_Info__c</fullName>
        <formula>&quot;https://www.zoominfo.com/login&quot;+&quot;  &quot;+&quot;(150 Total seats)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zoom Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zoom_Info_no__c</fullName>
        <label>Zoom Info #</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bizible2__Ad_Campaign_Name_FT__c</fullName>
        <label>Ad Campaign Name (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Ad_Campaign_Name_LC__c</fullName>
        <label>Ad Campaign Name (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Landing_Page_FT__c</fullName>
        <label>Landing Page (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Landing_Page_LC__c</fullName>
        <label>Landing Page (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Marketing_Channel_FT__c</fullName>
        <description>Type of marketing activity</description>
        <inlineHelpText>Type of marketing activity</inlineHelpText>
        <label>Marketing Channel (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Marketing_Channel_LC__c</fullName>
        <description>Type of marketing activity</description>
        <inlineHelpText>Type of marketing activity</inlineHelpText>
        <label>Marketing Channel (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Date_FT__c</fullName>
        <description>The date that the session activity occurred</description>
        <inlineHelpText>The date that the session activity occurred</inlineHelpText>
        <label>Touchpoint Date (FT)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Date_LC__c</fullName>
        <description>The date that the session activity occurred</description>
        <inlineHelpText>The date that the session activity occurred</inlineHelpText>
        <label>Touchpoint Date (LC)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Source_FT__c</fullName>
        <description>The name of the referrer</description>
        <inlineHelpText>The name of the referrer</inlineHelpText>
        <label>Touchpoint Source (FT)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Source_LC__c</fullName>
        <description>The name of the referrer</description>
        <inlineHelpText>The name of the referrer</inlineHelpText>
        <label>Touchpoint Source (LC)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Ad_Content_FT__c</fullName>
        <description>The title, copy, and display URL from the ad</description>
        <inlineHelpText>The title, copy, and display URL from the ad</inlineHelpText>
        <label>Ad Content (FT)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Ad_Content_LC__c</fullName>
        <description>The title, copy, and display URL from the ad</description>
        <inlineHelpText>The title, copy, and display URL from the ad</inlineHelpText>
        <label>Ad Content (LC)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Ad_Destination_URL_FT__c</fullName>
        <label>Ad Destination URL (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Ad_Destination_URL_LC__c</fullName>
        <label>Ad Destination URL (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Ad_Group_Name_FT__c</fullName>
        <label>Ad Group Name (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Ad_Group_Name_LC__c</fullName>
        <label>Ad Group Name (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Device_FT__c</fullName>
        <description>The device that the user is using while engaged in the activity</description>
        <inlineHelpText>The device that the user is using while engaged in the activity</inlineHelpText>
        <label>Device (FT)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Device_LC__c</fullName>
        <description>The device that the user is using while engaged in the activity</description>
        <inlineHelpText>The device that the user is using while engaged in the activity</inlineHelpText>
        <label>Device (LC)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Geo_FT__c</fullName>
        <description>The country, region, city that the user is located in while engaged in the activity</description>
        <inlineHelpText>The country, region, city that the user is located in while engaged in the activity</inlineHelpText>
        <label>Geo (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Geo_LC__c</fullName>
        <description>The country, region, city that the user is located in while engaged in the activity</description>
        <inlineHelpText>The country, region, city that the user is located in while engaged in the activity</inlineHelpText>
        <label>Geo (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Keyword_Text_FT__c</fullName>
        <description>Keywords chosen by the advertiser that match the user&apos;s search results</description>
        <inlineHelpText>Keywords chosen by the advertiser that match the user&apos;s search results</inlineHelpText>
        <label>Keyword Text (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Keyword_Text_LC__c</fullName>
        <description>Keywords chosen by the advertiser that match the user&apos;s search results</description>
        <inlineHelpText>Keywords chosen by the advertiser that match the user&apos;s search results</inlineHelpText>
        <label>Keyword Text (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Landing_Page_Raw_FT__c</fullName>
        <label>Landing Page - Raw (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Landing_Page_Raw_LC__c</fullName>
        <label>Landing Page - Raw (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Marketing_Channel_Path_FT__c</fullName>
        <description>The whole path of the Marketing Channel including any custom Sub Channels</description>
        <inlineHelpText>The whole path of the Marketing Channel including any custom Sub Channels</inlineHelpText>
        <label>Marketing Channel - Path (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Marketing_Channel_Path_LC__c</fullName>
        <description>The whole path of the Marketing Channel including any custom Sub Channels</description>
        <inlineHelpText>The whole path of the Marketing Channel including any custom Sub Channels</inlineHelpText>
        <label>Marketing Channel - Path (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Medium_FT__c</fullName>
        <description>The channel being used (ex. web, search, email), set within the UTM parameter</description>
        <inlineHelpText>The channel being used (ex. web, search, email), set within the UTM parameter</inlineHelpText>
        <label>Medium (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Medium_LC__c</fullName>
        <description>The channel being used (ex. web, search, email), set within the UTM parameter</description>
        <inlineHelpText>The channel being used (ex. web, search, email), set within the UTM parameter</inlineHelpText>
        <label>Medium (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Placement_Id_FT__c</fullName>
        <label>Placement Id (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Placement_Id_LC__c</fullName>
        <label>Placement Id (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Placement_Name_FT__c</fullName>
        <label>Placement Name (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Placement_Name_LC__c</fullName>
        <label>Placement Name (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Platform_Browser_FT__c</fullName>
        <description>The operating system and browser that the user is on while engaged in the activity</description>
        <inlineHelpText>The operating system and browser that the user is on while engaged in the activity</inlineHelpText>
        <label>Platform / Browser (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Platform_Browser_LC__c</fullName>
        <description>The operating system and browser that the user is on while engaged in the activity</description>
        <inlineHelpText>The operating system and browser that the user is on while engaged in the activity</inlineHelpText>
        <label>Platform / Browser (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Referrer_Page_FT__c</fullName>
        <label>Referrer Page (FT)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Referrer_Page_LC__c</fullName>
        <label>Referrer Page (LC)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Referrer_Page_Raw_FT__c</fullName>
        <description>The URL of the referring website</description>
        <inlineHelpText>The URL of the referring website</inlineHelpText>
        <label>Referrer Page - Raw (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Referrer_Page_Raw_LC__c</fullName>
        <description>The URL of the referring website</description>
        <inlineHelpText>The URL of the referring website</inlineHelpText>
        <label>Referrer Page - Raw (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Search_Phrase_FT__c</fullName>
        <description>The term(s) that the user entered to view the search results</description>
        <inlineHelpText>The term(s) that the user entered to view the search results</inlineHelpText>
        <label>Search Phrase (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Search_Phrase_LC__c</fullName>
        <description>The term(s) that the user entered to view the search results</description>
        <inlineHelpText>The term(s) that the user entered to view the search results</inlineHelpText>
        <label>Search Phrase (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Site_Id_FT__c</fullName>
        <label>Site Id (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Site_Id_LC__c</fullName>
        <label>Site Id (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Site_Name_FT__c</fullName>
        <label>Site Name (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2_ext__Site_Name_LC__c</fullName>
        <label>Site Name (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__AdWords_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Campaign (FT)</label>
        <referenceTo>bizible__AdWords_Campaign__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>